[package]
name = "rust_observable"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hydroper/rust_observable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_observable_literal = { path = "../observable_literal" }