[package]
name = "rust_observable"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/hydroper/rust_observable"
description = "Push-based data source Observable type"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_observable_literal = { path = "../observable_literal", version = "0.1.0" }