[package]
name = "rust_observable_literal"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hydroper/rust_observable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1", features = ["nightly"] }
quote = "1"
syn = { version = "2.0.28", features = ["full", "parsing", "proc-macro"] }

[lib]
proc-macro = true